<resources>
    <string name="app_name">Instagram</string>
    <!-- Strings related to btnlogin -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
</resources>